<resources>
    <string name="app_name">Coroutines and Flows on Android</string>
    <string name="perform_single_network_request_on_background_thread">Load recent Android Versions</string>
    <string name="perform_2_network_requests_sequentially">Load Features of most recent Android Version</string>
    <string name="load_features_of_android_versions_sequentially">Load Features of Android Versions sequentially</string>
    <string name="load_features_of_android_versions_concurrently">Load Features of Android Versions concurrently</string>
    <string name="duration">Operation took %d ms</string>
    <string name="duration_calculation">Calculation took %d ms</string>
    <string name="duration_stringconversion">Converting BigInteger to String took %d ms</string>
    <string name="timeout">TimeOut in ms: </string>
    <string name="load_android_versions">Load Android Versions</string>
    <string name="clear_database">Clear Database</string>
    <string name="loading_data_from_database">loading data from database</string>
    <string name="loading_data_from_network">loading data from network</string>
    <string name="load_recent_android_versions_and_do_some_calculations">Load Recent Android Versions and do some calculations</string>
    <string name="factorial_of">Factorial of:</string>
    <string name="calculate">Calculate</string>
    <string name="number_of_coroutines">Number of Coroutines:</string>
    <string name="device_cores">Your device has %d cores</string>
    <string name="cancel">Cancel</string>
    <string name="workmanager_request">A work manager worker was requested to send an analytics request.</string>
    <string name="dispatcher">Coroutine Dispatcher:</string>
    <string name="yield_during_calculation">yield() during calculation</string>

    <string-array name="dispatchers">
        <item>Default</item>
        <item>IO</item>
        <item>Main</item>
        <item>Unconfined</item>
    </string-array>
</resources>
