<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnLoadData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/load_android_versions" />

        <Button
            android:id="@+id/btnClearDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/clear_database" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ProgressBar
                android:id="@+id/progressBarLoadFromDb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageViewDatabaseLoadSuccessOrError"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewLoadFromDatabase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_data_from_database"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ProgressBar
                android:id="@+id/progressBarLoadFromNetwork"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageViewNetworkLoadSuccessOrError"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewLoadFromNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/loading_data_from_network" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            tools:text="Results" />

    </LinearLayout>

</LinearLayout>